1.生成目录功能，完善配置模版及使用说明

--- a/使用说明.md
+++ b/使用说明.md
@@ -26,9 +26,9 @@
 {{start_date}} 开工时间
 {{end_date}} 截止时间
 {{duration}} 工期
-2. 一二三级标题分别用{#一级标题}，{##二级标题}，{###三级标题}配置
+2. 章节模版支持三级标题，一二三级标题分别用{#一级标题}，{##二级标题}，{###三级标题}配置
 
 # 字体大小
 
 1. 章节标题 18, 正文 10，插图标题 8
-2. 一二三级标题分别为 16 14 12
+2. 一二三级标题字号分别为 18 15 12
