1. 支持导入配置

--- a/使用说明.md
+++ b/使用说明.md
@@ -41,6 +41,10 @@ image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/f
    {{duration}} 工期
 2. 章节模版支持三级标题，一二三级标题分别用{#一级标题}，{##二级标题}，{###三级标题}配置
 
+# 如何导入配置
+
+点击 下载配置 可以将当前的配置下载到本地，多人协作编辑时，可以导入并合并他人的配置，点击 选择文件，选中配置文件，即可将配置文件中的内容合并到现有配置中
+
 # 字体大小
 
 1. 章节标题 18, 正文 10，插图标题 8
