1. 更新使用说明 2. 保留节内容头部空格符 3. 调整表格字体，节标题间距

--- a/使用说明.md
+++ b/使用说明.md
@@ -15,6 +15,10 @@
 2. 把中文处依次替换成图片真实的值， 其中，图片base64编码需要把图片上传到转换网站生成，例如下边这个网站：
    http://www.ab173.com/gongju/ui/image2base64.php
 
+完整示例：
+{"pdfImgName":"施工流程图1","width":40,"height":40,"src":"data:
+image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"}
+
 # 如何插入表格
 
 1. 在要插入表格的地方，另起一行，输入模版：
@@ -27,13 +31,9 @@
 
 2. 填入真实表名，数据行 ["姓名"，"性别"，"年龄"] 引号的内容替换为真实的表头，后续的行按照真实数据对应表头顺序填入即可
 
-完整示例：
-{"pdfImgName":"施工流程图1","width":40,"height":40,"src":"data:
-image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"}
-
 # 如何插入模版参数
 
-1. 在配置模版中插入特定的双花括号包裹的字符，在生成的pdf中，这些模版会被替换顶部配置的参数，现有配置：
+1. 在配置模版中插入特定的双花括号包裹的字符，在生成的pdf中，这些模版会被替换成顶部配置的参数，现有配置：
    {{name}} 项目名称
    {{address}} 项目地址
    {{start_date}} 开工时间
