1.新增多个参数配置

--- a/使用说明.md
+++ b/使用说明.md
@@ -35,10 +35,18 @@ image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/f
 
 1. 在配置模版中插入特定的双花括号包裹的字符，在生成的pdf中，这些模版会被替换成顶部配置的参数，现有配置：
    {{name}} 项目名称
-   {{address}} 项目地址
+   {{address}} 建设地点
    {{start_date}} 开工时间
    {{end_date}} 截止时间
-   {{duration}} 工期
+   {{duration}} 工期天数
+   {{jsgm}} 建设规模
+   {{bdhf}} 标段划分
+   {{zjly}} 资金来源
+   {{zlbz}} 质量标准
+   {{zbfw}} 招标范围
+   {{czbl}} 出资比例
+   {{zjlsqk}} 资金落实情况
+  
 2. 章节模版支持三级标题，一二三级标题分别用{#一级标题}，{##二级标题}，{###三级标题}配置
 
 # 如何导入配置
