1.使用说明 页面微调

--- a/使用说明.md
+++ b/使用说明.md
@@ -11,20 +11,20 @@
 ## 如何在模版中插入图片
 
 1. 在要插入图片的地方，另起一行，输入模版：
-   {"pdfImgName":"图片名称","width":图片宽度,"height":图片高度,"src":"图片base64编码"}
-   并在结尾换行
+   > {"pdfImgName":"图片名称","width":图片宽度,"height":图片高度,"src":"图片base64编码"}
+   > 并在结尾换行
 
 2. 把中文处依次替换成图片真实的值， 其中，图片base64编码需要把图片上传到转换网站生成，例如下边这个网站：
-   http://www.ab173.com/gongju/ui/image2base64.php
+   > http://www.ab173.com/gongju/ui/image2base64.php
 
 完整示例：
-{"pdfImgName":"施工流程图1","width":40,"height":40,"src":"data:
+> {"pdfImgName":"施工流程图1","width":40,"height":40,"src":"data:
 image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"}
 <br><br>
 ## 如何插入表格
 
 1. 在要插入表格的地方，另起一行，输入模版：
-   {"pdfTableName":"表名","data":[
+   > {"pdfTableName":"表名","data":[
    ["姓名","性别","年龄"],
    ["张三","男","21"],
    ["李四","女","23"],
@@ -36,18 +36,18 @@ image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/f
 ## 如何插入模版参数
 
 1. 在配置模版中插入特定的双花括号包裹的字符，在生成的pdf中，这些模版会被替换成主页顶部配置的参数，现有配置：
-   {{name}} 项目名称
-   {{address}} 建设地点
-   {{start_date}} 开工时间
-   {{end_date}} 截止时间
-   {{duration}} 工期天数
-   {{jsgm}} 建设规模
-   {{bdhf}} 标段划分
-   {{zjly}} 资金来源
-   {{zlbz}} 质量标准
-   {{zbfw}} 招标范围
-   {{czbl}} 出资比例
-   {{zjlsqk}} 资金落实情况
+- {{name}} 项目名称   
+- {{address}} 建设地点  
+- {{start_date}} 开工时间 
+- {{end_date}} 截止时间 
+- {{duration}} 工期天数 
+- {{jsgm}} 建设规模 
+- {{bdhf}} 标段划分 
+- {{zjly}} 资金来源 
+- {{zlbz}} 质量标准 
+- {{zbfw}} 招标范围 
+- {{czbl}} 出资比例 
+- {{zjlsqk}} 资金落实情况
   
 2. 章节模版支持三级标题，一二三级标题分别用{#一级标题}，{##二级标题}，{###三级标题}配置
    <br><br>
