1.使用说明 新增标题，文案微调

--- a/使用说明.md
+++ b/使用说明.md
@@ -1,5 +1,5 @@
 <br><br>
-## 如何配置模板
+## 配置模板
 
 1. 主页点击蓝色**配置模版**链接，即可跳转配置页面，用于增删改章节模版，右侧填完提交，再点上方**保存配置**按钮，就会把所有配置保存到本地缓存
    主页可配置章模版，节模版；在节模版配置页面，可配置小节模版
@@ -8,7 +8,7 @@
 
 3. 在模版中插入特定的的花括号{}包裹的内容可以插入图片和一些模版参数，下面分别是插入方法   
    <br><br>
-## 如何在模版中插入图片
+## 在模版中插入图片
 
 1. 在要插入图片的地方，另起一行，输入模版：
    > {"pdfImgName":"图片名称","width":图片宽度,"height":图片高度,"src":"图片base64编码"}
@@ -21,7 +21,7 @@
 > {"pdfImgName":"施工流程图1","width":40,"height":40,"src":"data:
 image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7"}
 <br><br>
-## 如何插入表格
+## 插入表格
 
 1. 在要插入表格的地方，另起一行，输入模版：
    > {"pdfTableName":"表名","data":[
@@ -33,7 +33,7 @@ image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/f
 
 2. 填入真实表名，数据行 ["姓名"，"性别"，"年龄"] 引号的内容替换为真实的表头，后续的行按照真实数据对应表头顺序填入即可
 <br><br>
-## 如何插入模版参数
+## 插入模版参数
 
 1. 在配置模版中插入特定的双花括号包裹的字符，在生成的pdf中，这些模版会被替换成主页顶部配置的参数，现有配置：
 - {{name}} 项目名称   
@@ -51,7 +51,7 @@ image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/f
   
 2. 章节模版支持三级标题，一二三级标题分别用{#一级标题}，{##二级标题}，{###三级标题}配置
    <br><br>
-## 如何导入配置
+## 导入配置
 
 点击 下载配置 可以将当前的配置下载到本地，多人协作编辑时，可以导入并合并他人的配置，点击 选择文件，选中配置文件，即可将配置文件中的内容合并到现有配置中
 <br><br>
